--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/progress-bar-android": "^1.0.4",
+    "@react-native-community/progress-view": "^1.3.1",
+    "fbjs": "^3.0.0",
     "file-system": "^2.2.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-image-to-pdf": "^1.2.0"
+    "react-native-image-to-pdf": "^1.2.0",
+    "react-native-pdf": "^6.3.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
